--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "svg-tube-map"]
 	path = svg-tube-map
 	url = https://github.com/benbarnett/svg-tube-map.git
+[submodule "jquery-animate-enhanced"]
+	path = jquery-animate-enhanced
+	url = https://github.com/benbarnett/jquery-animate-enhanced.git
